--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -15,6 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "v4.0.0-alpha.2"
+    "bootstrap": "v4.0.0-alpha.2",
+    "underscore": "^1.8.3",
+    "modernizr": "^3.3.1"
   }
 }
